# anki_deck_builder

./: .gitignore  package-lock.json  package.json
backend/: .gitignore  Dockerfile  api.py  config.py  main.py  pyproject.toml
backend/app/api/: decks_api.py  general_api.py  stripe_api.py
backend/app/models/: models.py
backend/app/services/: anki_service.py  decks_service.py  firestore_service.py  gcs_service.py  gemini_service.py  open_ai_service.py
frontend/: .gitignore  Dockerfile  auth.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: trace
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  goober.js  next.js  react-hot-toast.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 3cd50e925765ea79.webpack.hot-update.json  45655083453301b6.webpack.hot-update.json  webpack.09881bec9ce13c64.hot-update.js  webpack.1c62bf709e31de3d.hot-update.js  webpack.33a83526140ff910.hot-update.js  (+25 more)
frontend/.next/types/app/: page.ts  (+1 more)
frontend/descriptions_for_mcp/: first.txt  second.txt
frontend/public/: browserconfig.xml  manifest.json  robots.txt  sitemap.xml
frontend/scripts/: prd.txt
frontend/src/: App.tsx  config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
frontend/src/components/: InitializeApp.tsx  JsonLd.tsx  PaymentForm.tsx  SocialShare.tsx  sign-in.tsx
(+45 files in other folders)
